WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73576
V8 bindings cleanup: V8WindowErrorHandler shouldn't be directly invoking script
https://bugs.webkit.org/show_bug.cgi?id=73576
Summary
V8 bindings cleanup: V8WindowErrorHandler shouldn't be directly invoking script
Rafael Weinstein
Reported
2011-12-01 11:21:24 PST
It should be calling through V8Proxy where appropriate checks are made.
Attachments
Patch
(1.76 KB, patch)
2011-12-01 11:23 PST
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2011-12-01 11:23:10 PST
Created
attachment 117449
[details]
Patch
Adam Barth
Comment 2
2011-12-01 11:50:42 PST
Comment on
attachment 117449
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117449&action=review
> Source/WebCore/ChangeLog:8 > + No tests needed. This patch is just bindings hygiene.
It's too bad this stuff isn't testable. That means we'll probably continue to screw this up.
WebKit Review Bot
Comment 3
2011-12-01 15:07:13 PST
Comment on
attachment 117449
[details]
Patch Clearing flags on attachment: 117449 Committed
r101716
: <
http://trac.webkit.org/changeset/101716
>
WebKit Review Bot
Comment 4
2011-12-01 15:07:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug