V8 bindings cleanup: V8WindowErrorHandler shouldn't be directly invoking script https://bugs.webkit.org/show_bug.cgi?id=73576

Patch by Rafael Weinstein <rafaelw@chromium.org> on 2011-12-01
Reviewed by Adam Barth.

No tests needed. This patch is just bindings hygiene.

* bindings/v8/V8WindowErrorHandler.cpp:
(WebCore::V8WindowErrorHandler::callListenerFunction):

git-svn-id: svn://svn.chromium.org/blink/trunk@101716 bbb929c8-8fbe-4397-9dbb-9b2b20218538